[package]
name = "rsvp"
version = "1.0.0"
edition = "2021"
description = "Terminal-based RSVP (Rapid Serial Visual Presentation) speed reader"
license = "MIT"
readme = "README.md"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
strip = true
