[package]
name = "rsvp"
version = "1.0.0"
edition = "2021"
description = "RSVP (Rapid Serial Visual Presentation) speed reader"
license = "MIT"
readme = "README.md"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
strip = true
