[project]
name = "rsvp-reader"
version = "1.0.0"
description = "Terminal-based RSVP (Rapid Serial Visual Presentation) speed reader"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.scripts]
rsvp = "rsvp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
